--- a/src/index.html
+++ b/src/index.html
@@ -42,22 +42,24 @@
         </div>
     </div>
 
-    <div class="container-fluid position-fixed top-0 start-0">
-        <div class="row">
+    <div class="container-fluid grid-container">
+        <div class="row h-50">
             <div class="col-6 position-relative">
                 <img src="/img/web/png/top_left.png" alt="Top Left" class="top-left">
                 <img src="/img/web/png/under_top_left.png" alt="Under Top Left" class="under-top-left">
             </div>
-            <div class="col-6">
-                <!-- Second column content will go here -->
+            <div class="col-6 position-relative">
+                <img src="/img/web/png/top_rightt.png" alt="Top Right" class="top-right">
+                <img src="/img/web/png/under_top_right.png" alt="Under Top Right" class="under-top-right">
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
-                <!-- Third column content will go here -->
+        <div class="row h-50">
+            <div class="col-6 position-relative">
+                <img src="/img/web/png/bottm_left.png" alt="Bottom Left" class="bottom-left">
+                <img src="/img/web/png/under_bottom_left.png" alt="Under Bottom Left" class="under-bottom-left">
             </div>
-            <div class="col-6">
-                <!-- Fourth column content will go here -->
+            <div class="col-6 position-relative">
+                <img src="/img/web/png/bottom_right.png" alt="Bottom Right" class="bottom-right">
             </div>
         </div>
     </div>
