--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,13 @@
     <div class="container-fluid p-0">
         <div class="row g-0">
             <div class="col-12">
+                <div class="menu-icon-container">
+                    <div class="menu-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
                 <img src="/img/web/png/background.png" alt="Decorative Background" class="background-img">
             </div>
         </div>
