adding menu bar

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,32 @@
     <div class="container-fluid p-0">
         <div class="row g-0">
             <div class="col-12">
-                <div class="menu-icon-container">
+                <img src="/img/web/png/background.png" alt="Decorative Background" class="background-img">
+                <div class="romantic-container">
                     <div class="menu-icon">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                        <span class="line1"></span>
+                        <span class="line2"></span>
+                        <span class="line3"></span>
+                    </div>
+                    <div class="menu-content">
+                        <div class="menu-item">
+                            <img src="/img/web/png/home.png" alt="Home" class="menu-icon-img">
+                            <span class="menu-label">Home</span>
+                        </div>
+                        <div class="menu-item">
+                            <img src="/img/web/png/gallery.png" alt="Gallery" class="menu-icon-img">
+                            <span class="menu-label">Gallery</span>
+                        </div>
+                        <div class="menu-item">
+                            <img src="/img/web/png/maps.png" alt="Maps" class="menu-icon-img">
+                            <span class="menu-label">Maps</span>
+                        </div>
+                        <div class="menu-item">
+                            <img src="/img/web/png/story.png" alt="Story" class="menu-icon-img">
+                            <span class="menu-label">Story</span>
+                        </div>
                     </div>
                 </div>
-                <img src="/img/web/png/background.png" alt="Decorative Background" class="background-img">
             </div>
         </div>
     </div>
