--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <title>Love Website</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/src/style.css">
-    <link rel="shortcut icon" href="/img/favicon_io (1)/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../img/favicon_io (1)/favicon.ico" type="image/x-icon">
     <style>
         @font-face {
             font-family: 'DFVN Radja Lover';
-            src: url('/fonts/DFVN Radja Lover.otf') format('opentype');
+            src: url('../fonts/DFVN Radja Lover.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
         }
@@ -21,7 +21,7 @@
     <div class="container-fluid p-0">
         <div class="row g-0">
             <div class="col-12">
-                <img src="/img/web/png/background.png" alt="Decorative Background" class="background-img">
+                <img src="../img/web/png/background.png" alt="Decorative Background" class="background-img">
                 <div class="romantic-container">
                     <div class="menu-icon">
                         <span class="line1"></span>
@@ -30,19 +30,19 @@
                     </div>
                     <div class="menu-content">
                         <div class="menu-item">
-                            <img src="/img/web/png/home.png" alt="Home" class="menu-icon-img">
+                            <img src="../img/web/png/home.png" alt="Home" class="menu-icon-img">
                             <span class="menu-label">Home</span>
                         </div>
                         <div class="menu-item">
-                            <img src="/img/web/png/gallery.png" alt="Gallery" class="menu-icon-img">
+                            <img src="../img/web/png/gallery.png" alt="Gallery" class="menu-icon-img">
                             <span class="menu-label">Gallery</span>
                         </div>
                         <div class="menu-item">
-                            <img src="/img/web/png/maps.png" alt="Maps" class="menu-icon-img">
+                            <img src="../img/web/png/maps.png" alt="Maps" class="menu-icon-img">
                             <span class="menu-label">Maps</span>
                         </div>
                         <div class="menu-item">
-                            <img src="/img/web/png/story.png" alt="Story" class="menu-icon-img">
+                            <img src="../img/web/png/story.png" alt="Story" class="menu-icon-img">
                             <span class="menu-label">Story</span>
                         </div>
                     </div>
@@ -56,12 +56,12 @@
             <div class="col-12 text-center pt-5">
                 <div class="pic-container">
                     <div class="day-counter-wrapper">
-                        <img src="/img/web/png/day_counter.png" alt="Day Counter" class="day-counter">
+                        <img src="../img/web/png/day_counter.png" alt="Day Counter" class="day-counter">
                         <div class="day-counter-text">
                             <span id="days-counter">0</span> days
                         </div>
                     </div>
-                    <img src="/img/web/png/main_pic.png" alt="Main Picture" class="main-pic">
+                    <img src="../img/web/png/main_pic.png" alt="Main Picture" class="main-pic">
                 </div>
             </div>
         </div>
@@ -70,27 +70,27 @@
     <div class="container-fluid grid-container">
         <div class="row h-50">
             <div class="col-6 position-relative">
-                <img src="/img/web/png/top_left.png" alt="Top Left" class="top-left">
-                <img src="/img/web/png/under_top_left.png" alt="Under Top Left" class="under-top-left">
+                <img src="../img/web/png/top_left.png" alt="Top Left" class="top-left">
+                <img src="../img/web/png/under_top_left.png" alt="Under Top Left" class="under-top-left">
             </div>
             <div class="col-6 position-relative">
-                <img src="/img/web/png/top_rightt.png" alt="Top Right" class="top-right">
-                <img src="/img/web/png/under_top_right.png" alt="Under Top Right" class="under-top-right">
+                <img src="../img/web/png/top_rightt.png" alt="Top Right" class="top-right">
+                <img src="../img/web/png/under_top_right.png" alt="Under Top Right" class="under-top-right">
             </div>
         </div>
         <div class="row h-50">
             <div class="col-6 position-relative">
-                <img src="/img/web/png/bottm_left.png" alt="Bottom Left" class="bottom-left">
-                <img src="/img/web/png/under_bottom_left.png" alt="Under Bottom Left" class="under-bottom-left">
+                <img src="../img/web/png/bottm_left.png" alt="Bottom Left" class="bottom-left">
+                <img src="../img/web/png/under_bottom_left.png" alt="Under Bottom Left" class="under-bottom-left">
             </div>
             <div class="col-6 position-relative">
-                <img src="/img/web/png/bottom_right.png" alt="Bottom Right" class="bottom-right">
+                <img src="../img/web/png/bottom_right.png" alt="Bottom Right" class="bottom-right">
             </div>
         </div>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/src/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
