--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Love Website</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts - Fredoka -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../img/favicon_io (1)/favicon.ico" type="image/x-icon">
     <style>
@@ -14,6 +16,10 @@
             src: url('../fonts/DFVN Radja Lover.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
+        }
+        .menu-label {
+            font-family: 'Fredoka', sans-serif;
+            font-weight: 500;
         }
     </style>
 </head>
